fixed the white space

--- a/public/style.css
+++ b/public/style.css
@@ -84,6 +84,7 @@ body {
 .results {
   margin-left: 20px;
   font-weight: bold;
+  font-size: larger;
 }
 
 .eventlib-results {
@@ -95,7 +96,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   width: 85%;
-  height: 150px;
+  height: 135px;
   background-color: #f9f9f9;
   padding: 10px;
   margin-bottom: 20px;
